# sLink

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  conanfile.py
client/: CMakeLists.txt
client/src/: main.cpp
client/src/client/: Client.cpp  Client.h
client/src/client_application/: ClientApplication.cpp  ClientApplication.h
client/src/ui/components/chat_window/: UIChatWindow.cpp  UIChatWindow.h
client/src/ui/components/client_login/: UIClientLogin.cpp  UIClientLogin.h
client/src/ui/components/client_register/: UIClientRegister.cpp  UIClientRegister.h
client/src/ui/layers/chat_layer/: UIChatLayer.cpp  UIChatLayer.h
client/src/ui/layers/login_layer/: UILoginLayer.cpp  UILoginLayer.h
client/src/ui/layers/register_layer/: UIRegisterLayer.cpp  UIRegisterLayer.h
common/: CMakeLists.txt
common/application/: Application.cpp  Application.h
common/message/: Message.cpp  Message.h
common/profile_picture/: ProfilePicture.cpp  ProfilePicture.h
common/protocol/: Command.h  Packet.h  Packet_Header.h  Protocol.h  command.h  packet.h  packet_header.h  protocol.h
common/renderer/: Renderer.cpp  Renderer.h
common/sound/: Sound.cpp  Sound.h
common/ui/: ui_component.h
common/ui/backend/: UIBackend.cpp  UIBackend.h  UiBackend.cpp
common/ui/components/: UIComponent.h
common/ui/components/active_clients/: UIActiveClients.cpp  UIActiveClients.h
common/ui/components/chat_window/: UIChatWindow.cpp  UIChatWindow.h
common/ui/components/client_logging/: UIClientLogging.cpp  UIClientLogging.h
common/ui/components/client_login/: UIClientLogin.cpp  UiClientLogin.cpp  UiClientLogin.h
common/ui/components/info/: UIInfo.cpp  UIInfo.h
common/ui/layers/: UILayer.cpp  UILayer.h  UILoginLayer.cpp  UILoginLayer.h
common/ui/layers/chat_layer/: UIChatLayer.cpp  UIChatLayer.h
common/ui/layers/clients_layer/: UIClientsLayer.cpp  UIClientsLayer.h  UiClientsLayer.cpp
common/ui/layers/login_layer/: UILoginLayer.h
common/utility/base64/: Base64.cpp  Base64.h
common/utility/benchmark/: Benchmark.h
common/utility/file_explorer/: FileExplorer.cpp  FileExplorer.h
common/utility/safe_queue/: SafeQueue.h
common/utility/timestamp/: Timestamp.cpp  Timestamp.h
common/window/: Window.cpp  Window.h
server/: CMakeLists.txt
server/src/: main.cpp
server/src/database/: Database.cpp  Database.h
server/src/database/password_hasher/: PasswordHasher.cpp  PasswordHasher.h
server/src/server/: Server.cpp  Server.h
server/src/server_application/: ServerApplication.cpp  ServerApplication.h
server/src/session/: Session.cpp  Session.h
server/src/ui/components/active_clients/: UIActiveClients.cpp  UIActiveClients.h
server/src/ui/components/client_logging/: UIClientLogging.cpp  UIClientLogging.h
server/src/ui/components/port_select/: UIPortSelect.cpp  UIPortSelect.h
server/src/ui/layers/clients_layer/: UIClientsLayer.cpp  UIClientsLayer.h
server/src/ui/layers/server_port/: UIServerPortLayer.cpp  UIServerPortLayer.h
server/src/user/: User.cpp  User.h
tests/: CMakeLists.txt  test_message.cpp  test_safe_queue.cpp  test_timestamp.cpp
